Update trading hours display

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 if (html) {
                     grid.innerHTML = html;
                 } else {
-                    grid.innerHTML = '<div class="card text-center col-span-4"><p class="text-orange-600 font-medium">Markets Closed</p><p class="text-gray-400 text-sm mt-1">15m crypto markets run 6 PM - 12 AM EST</p></div>';
+                    grid.innerHTML = '<div class="card text-center col-span-4"><p class="text-orange-600 font-medium">Markets Closed</p><p class="text-gray-400 text-sm mt-1">Polymarket 5m/15m crypto markets run 6:15 PM - 1:15 AM EST</p></div>';
                 }
 
             } catch (e) {
